fix(ui): align vertical divider with border

--- a/src/styles/extraLinks.module.css
+++ b/src/styles/extraLinks.module.css
@@ -18,7 +18,7 @@
   content: '';
   position: absolute;
   left: 0;
-  top: calc(-0.75rem - 4px);
+  top: calc(-0.75rem);
   bottom: -1px;
   width: 1px;
   background-color: var(--extraPageBorderColor);
